--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">GeoQuiz</string>
     <string name="question_text">Канберра - столица Австралии.</string>
     <string name="true_button">Правда</string>
-    <string name="false_button">Глупость</string>
+    <string name="false_button">Ложь</string>
+    <string name="correct_toast">Верный ответ!</string>
+    <string name="incorrect_toast">Подумайте ещё.</string>
+
 </resources>
