--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GeoQuiz</string>
+    <string name="app_name">GeoQuizChallenge</string>
     <string name="question_text">Канберра - столица Австралии.</string>
     <string name="true_button">Правда</string>
     <string name="false_button">Ложь</string>
